--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -6,6 +6,7 @@
     --color-two:#FEC700;
     --color-text:#5b6c8f;
     --font: 'Inria Serif',serif;
+    --color-bg:#F0F2F5;
 }
 .container{
     width: 100%;
