--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -7,6 +7,7 @@
     --color-text:#5b6c8f;
     --font: 'Inria Serif',serif;
     --color-bg:#F0F2F5;
+    --color-green:#13A05D;
 }
 .container{
     width: 100%;
