--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,6 +1,10 @@
 .header{
     /* Do bong */
     box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
+    position:sticky;
+    top:0;
+    background: var(--color-bg);
+    z-index:9999;
 }
 .header-top{
     background: var(--color-one);
