--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -320,7 +320,7 @@
 .section-four .inner-content h1{
     color: var(--color-one);
     font-size:60px;
-    font-family: --font;
+    font-family:var(--font);
     font-weight: 10px;
 }
 .section-four .inner-content p{
@@ -378,3 +378,215 @@
 
 }
 /* End section-five */
+/* Section-six */
+.section-six{
+    margin-top:80px;
+}
+.section-six .inner-title{
+    font:var(--font);
+    color:var(--color-one);
+    font-size:20px;
+    
+}
+.section-six .inner-title h1{
+   text-align: center;
+}
+.section-six .inner-wrap .inner-image .ig{
+    width:25%;
+    /* cho moi khoi chiem 25% */
+}
+.section-six .inner-wrap .inner-image .ig p{
+    font-size:20px;
+    color: var(--color-one);
+   margin-left:20px;
+
+}
+.section-six .inner-wrap .inner-image .ig span{
+    font-size:30px;
+    color: var(--color-one);  
+    margin-left:20px;  
+    font-weight: 700;
+}
+.section-six .inner-wrap .inner-image img{
+    width:100%;
+    height:150px;
+   
+}
+
+.section-six .inner-wrap .inner-image{
+    display:flex;
+
+}
+/* End section-six */
+/* section-secven */
+.section-seven{
+    margin-top:70px;
+    margin-bottom:70px;
+    background:var(--color-bg);
+    padding-top:70px;
+    padding-bottom:70px;
+}
+.section-seven .inner-title{
+    text-align:center;
+    font-size:30px;
+    color:var(--color-one);
+    font-family:var(--font);
+    font-weight: 700;
+}
+.section-seven .inner-input{
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    margin-top:20px;
+
+}
+.section-seven .inner-input span {
+    background:var(--color-two);
+    padding:10px;
+    border-radius:45px;
+    
+}
+/* End section-seven */
+
+/* section-eight */
+.section-eight{
+    background:var(--color-bg) ;
+    padding:70px;
+}
+
+.section-eight .inner-title{
+    font-size:40px;
+    font-family:var(--font);
+    color:var(--color-one);
+    font-weight: 800;
+    text-align: center;
+}
+.section-eight .inner-content{
+    display:flex;
+    justify-content:space-between;
+    margin-top:30px;
+}
+.section-eight .inner-content .inner-des{
+    margin-left:30px;
+    background:#FFFFFF;
+    font-size:17px;
+    color: var(--color-one);
+    padding:30px;
+    /* text-align: center; */
+}
+.section-eight .inner-content .inner-des span{
+    font-weight:600;
+    font-size:22px;
+}
+/* end section-eight */
+
+/* section-nine */
+.section-nine .inner-wrap{
+    display:flex;
+    /* background: var(--color-bg); */
+    padding-bottom:70px;
+}
+
+.section-nine .inner-wrap .inner-support{
+    width:40%;
+}
+.section-nine .inner-wrap .inner-support .inner-method{
+    padding-top:70px;
+}
+.section-nine .inner-wrap .inner-support .inner-method h1{
+    font-size:36px;
+    color:var(--color-one);
+    font-weight:600;
+    font-family: var(--font);
+    
+}
+.section-nine .inner-wrap .inner-support .inner-method p{
+    font-size:18px;
+    color:var(--color-text); 
+    margin-bottom:40px;
+}
+.section-nine .inner-wrap .inner-support .inner-method span{
+    font-size:20px;
+    color:var(--color-one); 
+    font-weight: 700;
+    border-radius:45px;
+    /* border-color: var(--color-text); */
+    padding:15px 20px;
+    
+    
+
+}
+.section-nine .inner-wrap .inner-support .inner-method span:hover{
+    color:#ffffff; 
+    font-weight: 700;
+    border-radius:45px;
+    /* border-color: var(--color-text); */
+    background: var(--color-one);
+
+}
+.section-nine .inner-wrap .inner-support .inner-method ul{
+    display:flex;
+    margin-left :0;
+    padding-left:0;
+    
+
+    
+}
+.section-nine .inner-wrap .inner-support .inner-method li{
+    display:flex;
+    list-style-type:none;
+    margin-right:15px;
+    color:var(--color-text);
+    font-size:20px;
+    
+}
+.section-nine .inner-wrap .inner-map iframe{
+    height:680px;
+}
+/* End section-nine */
+/* section-ten */
+.section-ten{
+    background:var(--color-one);
+    padding:30px;
+}
+.section-ten .inner-wrap{
+    display:flex;
+}
+.section-ten .inner-wrap ul{
+    width:23%;
+    margin-left:40px;
+    list-style-type: none;
+    font-size:20px;
+    color:#FFFFFF;
+    margin-left: 0;
+    padding-left: 0;
+}
+.section-ten .inner-wrap ul li{
+    margin-top: 10px;;
+}
+/* end section-ten */
+/* section-11 */
+
+.section-11 .inner-wrap{
+    display:flex;
+    justify-content: space-between;
+    margin-right: 50px;
+    margin-top:45px;
+    margin-bottom:45px;
+}
+.section-11 .inner-wrap .inner-image{
+    width:40%;
+    display:flex;
+    
+}
+.section-11 .inner-wrap .inner-image img{
+    width:30px;
+    height:auto;
+    margin-right: 15px;
+}
+.section-11 .inner-wrap .inner-content{
+    font-size:20px;
+    color:var(--color-one);
+    
+}
+/* end section-11 */
